# SE_NES_Emu

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md
include/: emu.h  flags.h  memory.h  opcode_handlers.h  opcodes.h  registers.h  state_object.h  types.h
prototypes/: gui.py
src/: emu.cpp  flags.cpp  main.cpp  memory.cpp  opcode_handlers.cpp  registers.cpp
src/app/: CMakeLists.txt  main.cpp  window.cpp  window.h
src/emu_sources/: CMakeLists.txt  emu.cpp  emu.h  flags.cpp  flags.h  memory.cpp  memory.h  opcode_handlers.cpp  opcode_handlers.h  opcodes.h  registers.cpp  registers.h  types.h
src/roms/16bitload/: nn_sp_imm
tests/: CMakeLists.txt  memory_sample.txt  memory_tests.cpp  register_tests.cpp
